--- a/index.html
+++ b/index.html
@@ -155,16 +155,13 @@
                     <h3>Integrazione dell'<span>AI</span></h3>
     
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
+                        Il sistema AI della piattaforma permette l'analisi dei paraemtri del paziente nella loro complessità
+                        restituendo sempre risultati attendibili ed aggiornati in base anche allo storico dello stesso paziente.
+                        Lo scopo è quello di seguire il paziente continuamente senza tralasciare nessun dato che potrebbe essere importante 
+                        per la sua salute.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
+                
                     </p>
                     <button class="button-style">Esplora le funzionalità</button>
                 </div>
