--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h3>Perchè Scegliere BioVitalAge? </h3>
                 <p class="col-12 col-md-10 col-xxl-6 m-2 p-lg-2">
                     La piattafroma si basa sulle più moderne ricerche in campo di longevità e sull'attenzione che si pone
-                    ad ogni aseptto della vita del paziente partendo dal suo stile di vita, dal suo storico e fino alla sua clinica per ottenere un quadro completo a 360 gradi.
+                    ad ogni aseptto della vita del paziente partendo dal suo stile di vita, dal suo storico, fino alla sua clinica per ottenere un quadro completo a 360°.
                     
                 </p>
             </div>
@@ -183,11 +183,11 @@
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Alimentazione consapevole</h3>
+                    <h3>Alimentazione Consapevole</h3>
                     <p>
                        La corretta alimentazione è uno dei pilastri
-fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e grassi saturi e privileggiando alimenti ricchi di antiossidanti
-                        fibbre acidi grassi e omega-3 è possibile rallentare l'invecchaimento cellulare e mantenere una buona capacità vitale anche in età avanzata.
+fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e grassi saturi e privileggiando alimenti ricchi di antiossidanti,
+                        fibbre e acidi grassi omega-3, è possibile rallentare l'invecchiamento cellulare e mantenere una buona capacità vitale anche in età avanzata.
                         
                     </p>
                     <button class="arrow-button">Scopri di più</button>
@@ -199,16 +199,13 @@ fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e gra
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Tittle Placeholder</h3>
+                    <h3>Attività Fisica Regolare</h3>
                     <p>
-                        Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit.
-                        Saepe quis obcaecati, quos 
-                        voluptatibus nostrum eum 
-                        pariatur nobis dolorum at 
-                        nemo voluptas inventore ut
-                        odio, minus cupiditate.
-                        Illum commodi dicta ex.
+                    Un’importante elemento per mantenere una buona capacità vitale è
+l’esercizio fisico regolare. Quest’ultimo è fondamentale per prevenire malattie dell’invecchiamento
+come la sarcopenia, alterazioni metaboliche, patologie cardiovascolari. Inoltre, l’attività fisica
+stimola il sistema immunitario, aiuta a mantenere i muscoli attivi e contribuisce a un miglioramento
+generale dell’umore, grazie alla produzione di endorfine.
                     </p>
                     <button class="arrow-button">Scopri di più</button>
                 </div>
@@ -219,16 +216,14 @@ fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e gra
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Tittle Placeholder</h3>
+                    <h3>Benessere psicologico</h3>
                     <p>
-                        Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit.
-                        Saepe quis obcaecati, quos 
-                        voluptatibus nostrum eum 
-                        pariatur nobis dolorum at 
-                        nemo voluptas inventore ut
-                        odio, minus cupiditate.
-                        Illum commodi dicta ex.
+                        Il benessere psicologico gioca un ruolo fondamentale nella longevità.
+Studi dimostrano che tecniche di gestione dello stress come la meditazione, la mindfulness e la
+respirazione profonda possono ridurre i livelli di cortisolo (ormone dello stress), migliorare l’umore
+e promuovere una vita più equilibrata. Inoltre, il mantenimento della neuroplasticità, intesa come
+la capacità del cervello di riorganizzarsi e creare nuove connessioni, è vitale per preservare la
+memoria e le capacità cognitive nel tempo.
                     </p>
                     <button class="arrow-button">Scopri di più</button>
                 </div>
@@ -239,16 +234,13 @@ fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e gra
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Tittle Placeholder</h3>
+                    <h3>Qualità del sonno</h3>
                     <p>
-                        Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit.
-                        Saepe quis obcaecati, quos 
-                        voluptatibus nostrum eum 
-                        pariatur nobis dolorum at 
-                        nemo voluptas inventore ut
-                        odio, minus cupiditate.
-                        Illum commodi dicta ex.
+                       Fattore essenziale per il benessere fisico e psicologico è la qualità del
+sonno. Durante il sonno avvengono processi fondamentali per il mantenimento di una buona
+capacità vitale come la rigenerazione cellulare, la consolidazione della memoria e una buona
+neurocognitività. Inoltre, un sonno di qualità favorisce l’equilibrio metabolico, riduce i livelli di
+cortisolo e di stress dell’organismo.
                     </p>
                     <button class="arrow-button">Scopri di più</button>
                 </div>
@@ -259,16 +251,13 @@ fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e gra
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Tittle Placeholder</h3>
+                    <h3>Neurocognitività</h3>
                     <p>
-                        Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit.
-                        Saepe quis obcaecati, quos 
-                        voluptatibus nostrum eum 
-                        pariatur nobis dolorum at 
-                        nemo voluptas inventore ut
-                        odio, minus cupiditate.
-                        Illum commodi dicta ex.
+                        Il benessere cognitivo è strettamente legato alla longevità. Il cervello,
+come qualsiasi altro organo, necessita di stimolazione costante per mantenersi in forma: attività
+come la lettura, l’apprendimento di nuove abilità o giochi cognitivi aiutano a preservare le funzioni
+cerebrali. Studi dimostrano, infatti, che mantenere la mente attiva è uno dei fattori più influenti per
+prevenire demenza e altri disturbi neurodegenerativi.
                     </p>
                     <button class="arrow-button">Scopri di più</button>
                 </div>
@@ -279,16 +268,12 @@ fondamentali per una vita lunga e sana. Riducendo l'assunzione di zuccheri e gra
                             <img src="includes/images/icone/polmoni.png" alt="">
                         </div>
                     </div>
-                    <h3>Tittle Placeholder</h3>
+                    <h3>Interazioni sociali</h3>
                     <p>
-                        Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit.
-                        Saepe quis obcaecati, quos 
-                        voluptatibus nostrum eum 
-                        pariatur nobis dolorum at 
-                        nemo voluptas inventore ut
-                        odio, minus cupiditate.
-                        Illum commodi dicta ex.
+                     I rapporti interpersonali forti e duraturi garantiscono un supporto emotivo
+che riduce i livelli di stress e migliora l’umore dell’individuo. Le relazioni sane aumentano la
+resilienza mentale contribuendo ad uno stato di benessere generale e aumentando la capacità di
+affrontare le avversità della vita.
                     </p>
                     <button class="arrow-button">Scopri di più</button>
                 </div>
