--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     </h3>
     
                     <p class="col-md-12 p-4">
-                        BioVitalAgeClock è una piattaforma che elabora, mediante Intelligenza Artificiale (AI), i
-                        biomarcatori di laboratorio e fisiologici (sia strumentali che relativi a caratteristiche fisiche), che
-                        emergono dalla Letteratura Scientifica come potenzialmente associati all’invecchiamento e quindi
-                        anche alla perdita della capacità vitale e della resilienza biologica.
+                        Biovitalage è una piattaforma avanzata per la gestione medica che integra una cartella clinica
+completa di tutte le informazioni del paziente con BiovitalageClock, l&#39;innovativa funzione per il
+calcolo dell&#39;età biologica. Un software all&#39;avanguardia per monitorare la salute e il benessere dei
+pazienti con un approccio scientifico e personalizzato.
                     </p>
                 
                 </div>
