--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html
@@ -82,16 +82,12 @@
                 <h3>Percorsi Terapeutici con <span>BioVitalAge Therapy</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                Attraverso interventi nutraceutici, IV Therapy su misura, riabilitazione fisica e neurocognitiva, regolazione
+dei ritmi biologici e attività fisica personalizzata, Biovitalage Therapy favorisce il benessere cellulare, il
+recupero funzionale e la riduzione dell’età biologica. Grazie a un monitoraggio continuo e a protocolli
+scientificamente validati, Biovitalage Therapy aiuta a vivere più a lungo e in salute.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
                 </p>
                 <button class="button-style" id="percorsi" onclick="window.location ='../../url/contattaci/contattaci.html'">Richiedi Informazioni</button>
             </div>
@@ -113,16 +109,14 @@
                 <h3>Che cos'è <span>BioVitalAge Therapy</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                    Biovitalage Therapy è un approccio innovativo e personalizzato alla salute e alla longevità, basato
+sull’integrazione di analisi cliniche avanzate e strategie terapeutiche mirate. Attraverso la valutazione
+approfondita di parametri biologici e strumentali, Biovitalage Therapy identifica gli squilibri dell’organismo
+e propone interventi su misura per ottimizzare la salute cellulare, rallentare i processi di invecchiamento e
+migliorare il benessere generale.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                   
                 </p>
                 <button class="button-style" id="percorsi" onclick="window.location ='../../url/Innovation/innovation.html'">Scopri le ultime notizie</button>
             </div>
@@ -136,16 +130,17 @@
                 <h3>Come integriamo l'AI in <span>BioVitalAge Therapy</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+               Attraverso algoritmi di machine learning, la piattaforma elabora i dati clinici e strumentali per
+identificare schemi e correlazioni, fornendo valutazioni precise sull’età biologica e sullo stato di
+salute degli organi. L’AI supporta l’ottimizzazione delle terapie e dei programmi di riabilitazione,
+suggerendo trattamenti basati su evidenze scientifiche e adattandoli in tempo reale in base ai
+progressi del paziente. Inoltre, grazie a modelli predittivi, Biovitalage Therapy è in grado di
+anticipare potenziali squilibri e fornire strategie preventive mirate.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                    Questa integrazione consente un monitoraggio continuo e dinamico, garantendo un approccio
+personalizzato e sempre aggiornato alle esigenze di ogni individuo, per massimizzare i benefici e
+favorire una longevità in salute.
                 </p>
                 <button class="button-style" id="percorsi" onclick="window.location ='../BioVitalAgeClock/BioVitalAgeClock.html'">Scopri BioVitalAge Clock</button>
             </div>
@@ -167,18 +162,31 @@
 
                     <div class="col-12 col-md-4 p-3 p-md-4 p-lg-5 cards">
                         <h3>Interventi Nutraceutici</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod architecto veniam, ipsam possimus nulla laudantium iusto quod architecto veniam, ipsam possimus nulla laudantium iusto</p>
-                        <button class="arrow-button">Scopri di più</button>
+                        <p>Biovitalage integra un sistema avanzato per la personalizzazione degli interventi nutraceutici, mirati a
+ottimizzare la salute cellulare e rallentare i processi di invecchiamento. Attraverso l'analisi di parametri
+clinici e strumentali, la piattaforma identifica gli squilibri biologici e suggerisce strategie nutraceutiche su
+misura, basate su evidenze scientifiche. Questo approccio innovativo consente di supportare il benessere
+dell'organismo, migliorare le funzioni metaboliche e ridurre progressivamente l'età biologica.
+                            <button class="arrow-button">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4 p-3 p-md-4 p-lg-5 cards">
                         <h3>IV Therapy personalizzate</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod architecto veniam, ipsam possimus nulla laudantium iusto...</p>
-                        <button class="arrow-button">Scopri di più</button>
+                        <p>Biovitalage integra un sistema avanzato per la personalizzazione delle IV Therapy, mirate a ottimizzare la
+salute cellulare e il benessere generale. Grazie all&#39;analisi approfondita dei parametri clinici e strumentali, la
+piattaforma consente di formulare infusioni su misura, bilanciando vitamine, minerali, antiossidanti e altri
+principi attivi essenziali. Questo approccio innovativo favorisce il recupero energetico, il rafforzamento del
+sistema immunitario e la riduzione dell'età biologica, offrendo una strategia mirata per il miglioramento
+della longevità.
+                            <button class="arrow-button">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4 p-md-4 p-lg-5 cards">
                         <h3>Riabilitazione (Fisica e Neurocognitiva)</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod architecto veniam, ipsam possimus nulla laudantium iusto...</p>
-                        <button class="arrow-button">Scopri di più</button>
+                        <p>Biovitalage integra un sistema avanzato per la riabilitazione fisica e neurocognitiva, offrendo percorsi
+personalizzati basati sull'analisi di parametri clinici e strumentali. La piattaforma permette di monitorare e
+ottimizzare il recupero motorio e cognitivo, adattando gli interventi alle esigenze specifiche di ogni
+paziente. Grazie a un approccio innovativo e data-driven, Biovitalage favorisce il potenziamento delle
+capacità fisiche e mentali, contribuendo a migliorare la qualità della vita e il benessere generale.
+                            <button class="arrow-button">Scopri di più</button>
                     </div>
 
                 </div>
