--- a/url/Industries/industries.html
+++ b/url/Industries/industries.html
@@ -84,12 +84,10 @@
                     <h3>I Fondatori di <span>BioVitalAge</span></h3>
 
                     <p class="desktop">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Assumenda animi quae explicabo ex inventore asperiores,
-                        nobis labore itaque sunt neque dicta,
-                        dolorum, doloribus ipsa nemo vitae dolorem 
-                        impedit nesciunt necessitatibus?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                 Biovitalage nasce dall’incontro tra competenze scientifiche, mediche e tecnologiche con un unico obiettivo:
+rivoluzionare il concetto di longevità e medicina preventiva. I fondatori di Biovitalage condividono la
+passione per la ricerca e l’innovazione, combinando esperienza nel settore medico, biotecnologico e
+dell’intelligenza artificiale per creare una piattaforma all’avanguardia.
                     </p>
                     <p class="mobile">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -117,16 +115,15 @@
                 <h3>Our <span>Mission</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                    La missione di Biovitalage è rivoluzionare il concetto di longevità attraverso un approccio scientifico,
+personalizzato e basato sull’innovazione tecnologica. La piattaforma combina analisi avanzate, intelligenza
+artificiale e protocolli terapeutici mirati per ottimizzare la salute cellulare, rallentare l’invecchiamento
+biologico e migliorare la qualità della vita.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                   Con un approccio basato sulla medicina preventiva e predittiva, Biovitalage si pone l’obiettivo di
+trasformare la longevità in un percorso consapevole e misurabile, migliorando la vita delle persone
+attraverso soluzioni innovative e validate scientificamente.
                 </p>
                 <button class="button-style" id="percorsi" onclick="window.location ='../../url/Corporation/corporation.html'">Le nostre collaborazioni</button>
             </div>
@@ -142,16 +139,11 @@
                 <h3>Il nostro<span>Team</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                    Biovitalage è il risultato del lavoro sinergico di un team multidisciplinare, in cui ogni professionista
+contribuisce con la propria esperienza e competenza per sviluppare una piattaforma all’avanguardia,
+capace di integrare medicina, biotecnologia e intelligenza artificiale per migliorare la salute e la longevità.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
                 </p>
             </div>
 
@@ -168,11 +160,8 @@
             <div class="col-12 col-md-12 col-lg-8 col-xxl-5 p-3 p-md-5 demo-descrizione">
                 <h3>Contattaci</h3>
                 <p class="col-12 col-md-10">
-                    Lorem ipsum dolor, sit amet consectetur 
-                    adipisicing elit. In et placeat praesentium
-                    inventore ratione. Eius quidem fuga nam
-                    expedita perspiciatis qui quos, consequuntur 
-                    eveniet laborum nemo, obcaecati, exercitationem tempore iusto?
+                 Vuoi saperne di più su Biovitalage? Contattaci per informazioni, consulenze o collaborazioni. Il nostro team
+è a disposizione per rispondere a ogni tua domanda.
                 </p>
                 <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
                     <button class="button-style" onclick="window.location ='../../url/contattaci/contattaci.html'">I nostri contatti</button>
