--- a/url/Corporation/corporation.html
+++ b/url/Corporation/corporation.html
@@ -83,16 +83,12 @@
                     <h3>Collaboriamo attivamente con diverse <span>Aziende</span></h3>
     
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
+                     Biovitalage è aperta alla collaborazione con professionisti della salute, centri medici, ricercatori, aziende e
+istituzioni scientifiche per sviluppare soluzioni innovative nel campo della longevità e della medicina
+personalizzata. Crediamo nella sinergia tra competenze per migliorare il benessere delle persone attraverso
+tecnologie avanzate.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
                     </p>
                 </div>
     
@@ -204,11 +200,8 @@
                 <div class="col-12 col-md-12 col-lg-8 col-xxl-5 p-3 p-md-5 demo-descrizione">
                     <h3>Collabora con noi</h3>
                     <p class="col-md-10">
-                        Lorem ipsum dolor, sit amet consectetur 
-                        adipisicing elit. In et placeat praesentium
-                        inventore ratione. Eius quidem fuga nam
-                        expedita perspiciatis qui quos, consequuntur 
-                        eveniet laborum nemo, obcaecati, exercitationem tempore iusto?
+                     Se sei un medico, un ricercatore o un’azienda interessata a integrare Biovitalage nei tuoi servizi, sviluppare
+nuove soluzioni o partecipare ai nostri studi e progetti, contattaci.
                     </p>
                     <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
                         <button class="button-style" onclick="window.location ='../../url/contattaci/contattaci.html'">Contattaci</button>
