--- a/index.html
+++ b/index.html
@@ -497,11 +497,10 @@ affrontare le avversità della vita.
                 <h3>Prova BioVitalAge</h3>
                 <h5>Richiedi la Demo Gratuita Adesso!</h5>
                 <p class="col-12 col-md-8">
-                    Lorem ipsum dolor, sit amet consectetur 
-                    adipisicing elit. In et placeat praesentium
-                    inventore ratione. Eius quidem fuga nam
-                    expedita perspiciatis qui quos, consequuntur 
-                    eveniet laborum nemo, obcaecati, exercitationem tempore iusto?
+                   Vuoi sperimentare in prima persona come Biovitalage può rivoluzionare la gestione della salute e della
+longevità? Accedi alla demo gratuita e scopri le funzionalità avanzate della nostra piattaforma. Analizza il
+tuo stato di salute, esplora il calcolo dell’età biologica con BiovitalageClock e scopri come gli interventi
+personalizzati possono migliorare il tuo benessere.
                 </p>
                 <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
                     <button class="button-style" onclick="window.location = 'url/contattaci/contattaci.html';">Inizia la prova GRATUITA!</button>
