--- a/url/BioVitalAgeClock/BioVitalAgeClock.html
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.html
@@ -197,16 +197,10 @@ di stress.
                 <h3>Che cosa sono i <span>Biomarcatori</span></h3>
 
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                  I biomarcatori sono un vasto gruppo di segni clinici oggettivi che possono essere misurati in maniera accurata e riproducibile come indicatori di uno stato di salute, malattia o di risposta ad un’esposizione o ad un intervento.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                    amet soluta tempora quasi nam delectus necessitatibus,
-                     impedit voluptatum in ratione.
+                    I biomarcatori dell’invecchiamento sono indicatori fisiologici e molecolari della degenerazione strutturale o funzionale a livello sistemico, tissutale, cellulare e subcellulare dell’organismo correlata all’età. Essi possono essere usati per monitorare i cambiamenti biologici associati all’invecchiamento.
                 </p>
             </div>
         </div>
