--- a/url/contattaci/contattaci.html
+++ b/url/contattaci/contattaci.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Vitaly Age</title>
+    <title>BVA - Contattaci</title>
     <link rel="stylesheet" href="contattaci.css">
+    <link rel="shortcut icon" href="/BioVitalyAge-Website/includes/images/icone/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../componenti.css">
 
     <script src="../../app.js" defer></script>
