Fix another features into page contacts

--- a/url/Corporation/corporation.html
+++ b/url/Corporation/corporation.html
@@ -167,8 +167,8 @@
 nuove soluzioni o partecipare ai nostri studi e progetti, contattaci.
                     </p>
                     <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
-                        <button class="button-style" onclick="window.location ='../../url/contattaci/contattaci.html'">Contattaci</button>
-                        <button class="button-style" onclick="window.location ='../../index.html'">Richiedi Informazioni</button>
+                        <button class="button" onclick="window.location ='../../url/contattaci/contattaci.html'">Contattaci</button>
+                        <button class="button" onclick="window.location ='../../index.html'">Richiedi Informazioni</button>
                     </div>
                 </div>            
             </div>
