--- a/url/Industries/industries.html
+++ b/url/Industries/industries.html
@@ -123,14 +123,16 @@ capace di integrare medicina, biotecnologia e intelligenza artificiale per migli
             <div class="col-12 col-md-12 col-lg-8 col-xxl-5 p-3 p-md-5 demo-descrizione">
                 <h3>Contattaci</h3>
                 <p class="col-12 col-md-10">
-                 Vuoi saperne di più su Biovitalage? Contattaci per informazioni, consulenze o collaborazioni. Il nostro team
-è a disposizione per rispondere a ogni tua domanda.
+                    Vuoi saperne di più su Biovitalage? Contattaci per informazioni, consulenze o collaborazioni. Il nostro team
+                    è a disposizione per rispondere a ogni tua domanda.
                 </p>
                 <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
-                    <button class="button" onclick="window.location ='../../url/contattaci/contattaci.html'">I nostri contatti</button>
-                    <button class="button" onclick="window.location ='../../url/Corporation/corporation.html'">Collabora con noi</button>
+                    <button class="button" onclick="window.location ='../../url/contattaci/contattaci.html'">I nostri
+                        contatti</button>
+                    <button class="button" onclick="window.location ='../../url/Corporation/corporation.html'">Collabora con
+                        noi</button>
                 </div>
-            </div>            
+            </div>
         </div>
 
         
