Bug/fix HomePage

--- a/index.html
+++ b/index.html
@@ -253,7 +253,14 @@
                 <div class="grid-container p-3 p-md-5">
                     <div class="img-container-grid">
                         <div class="img-container-circle">
-                            <img src="includes/images/icone/polmoni.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#22C3E6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <title>Icona Orologio Biologico</title>
+                                <polyline points="12 6 12 12 16 14"></polyline>
+                                <path d="M10 10c1.5-1 3.5-1 5 0"></path>
+                                <path d="M10 14c1.5 1 3.5 1 5 0"></path>
+                                <path d="M12.5 8.5s-1 1.5-1 3.5s1 3.5 1 3.5"></path>
+                                <path d="M11.5 15.5s1-1.5 1-3.5s-1-3.5-1-3.5"></path>
+                            </svg>
                         </div>
                     </div>
                     <h3>Orologio biologico multi-organo</h3>
@@ -292,7 +299,16 @@
                 <div class="grid-container p-3 p-md-5">
                     <div class="img-container-grid">
                         <div class="img-container-circle">
-                            <img src="includes/images/icone/polmoni.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#22C3E6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <title>Icona Gestionale Integrato</title>
+                                <path d="M9.4 6.6a8 8 0 0 1 9.4-2.2l-1.8 3.1"/>
+                                <path d="M14.6 17.4a8 8 0 0 1-9.4 2.2l1.8-3.1"/>
+                                <path d="M6.6 9.4a8 8 0 0 1-2.2-9.4l3.1 1.8"/>
+                                <path d="M17.4 14.6a8 8 0 0 1 2.2 9.4l-3.1-1.8"/>
+                                <circle cx="12" cy="12" r="3"/>
+                                <path d="m15 9-.9-1.5"/>
+                                <path d="m9 15 .9 1.5"/>
+                            </svg>
                         </div>
                     </div>
                     <h3>Gestionale integrato</h3>
