--- a/index.html
+++ b/index.html
@@ -256,17 +256,12 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#22C3E6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <title>Icona Orologio Biologico</title>
-                                    <polyline points="12 6 12 12 16 14"></polyline>
-                                    <path d="M10 10c1.5-1 3.5-1 5 0"></path>
-                                    <path d="M10 14c1.5 1 3.5 1 5 0"></path>
-                                    <path d="M12.5 8.5s-1 1.5-1 3.5s1 3.5 1 3.5"></path>
-                                    <path d="M11.5 15.5s1-1.5 1-3.5s-1-3.5-1-3.5"></path>
-                                </svg>
+                                <div class="img-container-circle">
+                                    <img src="includes/images/icone/IconBiologicalClock.png" alt="Icona Orologio Biologico">
+                                </div>
                             </div>
                         </div>
-                        <h3>orologio biologico multi-organo e multi-sistema</h3>
+                        <h3>Orologio biologico multi-organo e multi-sistema</h3>
                         <p>
                             Stimiamo l’età biologica complessiva e quella specifica di organi e apparati, monitorandola nel tempo. 
                         </p>
@@ -280,7 +275,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <img src="includes/images/icone/polmoni.png" alt="">
+                                <img src="includes/images/icone/IconAi.svg" alt="Icona Intelligenza Artificiale">
                             </div>
                         </div>
                         <h3>Algoritmi AI proprietari e dinamici</h3>
@@ -297,7 +292,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <img src="includes/images/icone/polmoni.png" alt="">
+                                <img src="includes/images/icone/IconCartellaPaziente.png" alt="Icona Cartella Paziente">
                             </div>
                         </div>
                         <h3>Cartella clinica evoluta</h3>
@@ -314,16 +309,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#22C3E6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <title>Icona Gestionale Integrato</title>
-                                    <path d="M9.4 6.6a8 8 0 0 1 9.4-2.2l-1.8 3.1"/>
-                                    <path d="M14.6 17.4a8 8 0 0 1-9.4 2.2l1.8-3.1"/>
-                                    <path d="M6.6 9.4a8 8 0 0 1-2.2-9.4l3.1 1.8"/>
-                                    <path d="M17.4 14.6a8 8 0 0 1 2.2 9.4l-3.1-1.8"/>
-                                    <circle cx="12" cy="12" r="3"/>
-                                    <path d="m15 9-.9-1.5"/>
-                                    <path d="m9 15 .9 1.5"/>
-                                </svg>
+                                <img src="includes/images/icone/IconMedicalManagement.png" alt="Icona Cartella Paziente">
                             </div>
                         </div>
                         <h3>Gestionale integrato</h3>
@@ -340,7 +326,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <img src="includes/images/icone/polmoni.png" alt="">
+                                <img src="includes/images/icone/IconStrategyMarketing.png" alt="Icona Strategia Marketing">
                             </div>
                         </div>
                         <h3>Supporto strategico e marketing</h3>
@@ -357,7 +343,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <img src="includes/images/icone/polmoni.png" alt="">
+                                <img src="includes/images/icone/IconScalablePrice.png" alt="Icona Prezzo Scalabile">
                             </div>
                         </div>
                         <h3>Prezzo accessibile e scalabile</h3>
@@ -366,7 +352,7 @@
                         </p>
                     </div>
                     <div class="button-card px-4">
-                        <button class="arrow-button">Scopri di più</button>
+                        <button onclick="location.href='/BioVitalyAge-Website/url/Industries/industries.html'" class="arrow-button">Scopri di più</button>
                     </div>
                 </div>
 
@@ -374,7 +360,7 @@
                     <div class="p-4">
                         <div class="img-container-grid">
                             <div class="img-container-circle">
-                                <img src="includes/images/icone/polmoni.png" alt="">
+                                <img src="includes/images/icone/IconSupportScience.png" alt="Icona Supporto Scientifico">
                             </div>
                         </div>
                         <h3>Approccio scientifico e personalizzato</h3>
@@ -383,7 +369,7 @@
                         </p>
                     </div>
                     <div class="button-card px-4">
-                        <button class="arrow-button">Scopri di più</button>
+                        <button onclick="location.href='/BioVitalyAge-Website/url/Innovation/innovation.html'" class="arrow-button">Scopri di più</button>
                     </div>
                 </div>
             </div>
